--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Weby</title>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
+ 
+<h1>This is Testing Git</h1>
 <p>This is a paragraph.</p>
 
 </body>
